# jenkins-test

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  pyproject.toml
app/: main.py
tests/: test_main.py
