[project]
name = "jenkins-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.8.5",
    "coverage>=7.9.1",
    "fastapi>=0.115.13",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "safety>=3.5.2",
    "uvicorn>=0.34.3",
]
